# morannon

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
morannon-config/: Cargo.toml
morannon-config/examples/: morannon.toml
morannon-config/src/: client.rs  configuration.rs  daemon.rs  lib.rs  model.rs  provider.rs
morannon-config/tests/: load_example.rs
morannon-daemon/: Cargo.toml
morannon-daemon/src/: auth.rs  config.rs  daemon.rs  main.rs
morannon-daemon/src/endpoints/: fallback.rs  mod.rs
morannon-daemon/src/endpoints/openai/: get_models.rs  mod.rs
morannon-daemon/src/endpoints/proxy/: handler.rs  mod.rs
