[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[workspace]
resolver = "3"
members = [
  "morannon-daemon",
]

[workspace.dependencies]
axum = { version = "0.8.*" }
axum-extra = { version = "0.12.*" }
clap = { version = "4.6.*" }
futures = { version = "0.3.*" }
googletest = { version = "0.14.*" }
serde = { version = "1.*" }
serde_json = { version = "1.0.* "}
serde_urlencoded = { version = "0.7.*" }
toml = { version = "1.0.7+spec-1.1.0" }
tokio = { version = "1.52.*" }
tokio-stream = { version = "0.1.*" }
tracing = { version = "0.1.*" }
tracing-subscriber = { version = "0.3.*" }

[profile.release]
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
