[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[workspace]
resolver = "3"
members = [
  "morannon-config",
  "morannon-daemon",
]

[workspace.dependencies]
morannon-config = { path = "morannon-config" }

axum = { version = "0.8.*" }
clap = { version = "4.*", features = ["derive"] }
axum-extra = { version = "0.12.*" }
directories = { version = "6.*" }
futures = { version = "0.3.*" }
googletest = { version = "0.14.*" }
reqwest = { version = "0.13.*", default-features = false }
serde = { version = "1.*" }
serde_json = { version = "1.0.* "}
serde_urlencoded = { version = "0.7.*" }
toml = { version = "1.0.7+spec-1.1.0" }
tokio = { version = "1.52.*" }
tokio-stream = { version = "0.1.*" }
tower-http = { version = "0.6.*" }
tracing = { version = "0.1.*" }
tracing-subscriber = { version = "0.3.*" }

[profile.release]
debug = false
opt-level = 3
lto = "fat"
codegen-units = 1
