[package]
name = "morannon-daemon"
readme = "../README.md"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true

include = [
    "**/*.rs",
    "Cargo.toml",
    "../README.md",
    "../CHANGELOG.md",
    "../LICENSE",
    "../rust-toolchain.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
axum-extra = { workspace = true, features = ["typed-header"] }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
googletest = { workspace = true }
