[package]
name = "morannon-daemon"
readme = "../README.md"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true

include = [
    "**/*.rs",
    "Cargo.toml",
    "../README.md",
    "../CHANGELOG.md",
    "../LICENSE",
    "../rust-toolchain.toml",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
axum = { workspace = true, features = ["macros"] }
clap = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
morannon-config = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
googletest = { workspace = true }
